@@ -78,6 +78,7 @@ Bug fixes:
 - Fix failure to detect installed device.
 - Fix wrong encrypted pass phrase with special characters.
 - Reflect owner and permission when ZFS config sync.
+- Fix error on empty ZFS config.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
